--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://zalish-shawon.github.io/online-donation"
   "name": "online-donation-campaign",
   "private": true,
   "version": "0.0.0",
@@ -9,6 +10,11 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+
+"scripts":{
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
+},
   "dependencies": {
     "chart.js": "^4.4.0",
     "localforage": "^1.10.0",
@@ -32,6 +38,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
